# regulus

./: .gitignore  COPYRIGHT  meup.org  readme.md  softwares.org
appearances/conky/: blue-white  conkyrc  gold-brown  launch_conky.sh  shades-of-blue  ubuntu  white-black-brown  white-blue-red
bash/: #prompt.sh#  .#prompt.sh  bash.org  config.org  constants.sh  dependencies.sh  dot_bashrc  internal.sh  latex.sh  msg.sh  prompt.sh  truc.org  vault.sh  yell.sh
bash/roadmap/: roadmap-template.org  roadmap.org  roadmap.sh
doc/: shortcuts.html  shortcuts.org  softwares.html  softwares.org
emacs/: bla  dot_emacs  dot_emacs.el  emacs.desktop  emacsclient.desktop  open-paper.sh
emacs/emacs.d/: abbrev_defs  maple-mode.el
emacs/emacs.d/ergoemacs-keybindings-5.3.9/: ergoemacs-layout-gb-dv.elc  ergoemacs-layout-gb.elc  ergoemacs-layout-it.elc  (+3 more)
emacs/emacs_dot_d/: abbrev_defs  doxymacs.el  meuporg.el  my-cpp.el  my-crypto.el  my-latex.el  my-misc.el  my-org.el  my-prog.el  regulus-theme.el  regulus-theme.el.old
firefox/: _keysnail.js  firefox.org
latex/: <article>.tex  article-english.tex  latex-compile.sh  macros.tex  presentation-english.tex
roadmap/: #roadmap-template.org#  ideas.txt  roadmap-implementation.org  roadmap-template.org  roadmap.el  roadmap.sh
templates/: org.org  roadmap.org
templates/programming/: py.py  sage.py  sh.sh
templates/programming/cpp/: CMakeLists.txt  class-code.cpp  class-header.hpp  main.cpp
vaugho/: vaugho.org  vaugho.sh
yell/: yell.org  yell.sh
zsh/: zshrc.zsh
zsh/meuporg/: meuporg.plugin.zsh
zsh/yell/: yell.plugin.zsh
(+396 files in other folders)
